# code-summarizer

./: .gitignore  CHANGELOG.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: test.yml
docs/: developer.md
src/summarizer/: app.py  cli.py  config.py  summarize.py  summary.py
tests/summarizer/: test_app.py  test_cli.py  test_config.py  test_summarize.py
